ui/public/style.css
body{
    background-color: rgb(206, 206, 206);
}
.log-snip {
    height: 200px;
    overflow: scroll;
    background-color: lightgrey;
    font-size: 12px;
}

.log {
    background-color: lightgrey;
    font-size: 12px;
}

.badge-strip{
    position: absolute;
    right: 0px;
    top: 0px;
}
#root {
    background-color: #efefef;
}

.btn-center-align {

    margin-left: 45%;
    margin-top: 150px;
    margin-bottom: 150px;
}
.btn-center-align :hover  {
    opacity: 0.7;
}

.card {
    padding-bottom: 55px;
}
.card-content {
    padding-bottom: 0px !important;
}
.card-content td {
    padding: 10px 4px;
}

.card-content th {
    padding: 4px 4px;
}
.card-content th:not(:first-child) {

    min-width:60px;
}

.card-action .pagination a{
    color: #000 !important;
    margin-right: 0px !important;
}
.card-action .pagination li{
    width: 40px;
}
.card-action .pagination{
    margin-top: 0 !important;
    margin-bottom: 0 !important;
    width: 290px;

    display: block;
    margin-left: auto !important;
    margin-right: auto !important;
}
/*.card-content div {*/
/*    height: 325px;*/
/*}*/

.paginated-card .card-action{
    padding-left: 0px;
    padding-right: 0px;
    display: block;


}
.input-field {

    margin-top: 7px;
    margin-bottom: 7px;
}

.graph-edge {
    stroke-width: 2;
    fill: none;
    marker-end: url(#arrowhead);
    /*marker-start: url(#label);*/
}


#Textarea-12 {
    background: url(linenumbers.png);
    background-size: 20;
    background-attachment: local;
    background-repeat: no-repeat;
    font-family: monospace;
    font-size: 14px;
    line-height: 16px;
    border-color:#ccc;
    width: calc(100% + 30px);
    display: block;
    background-size: 26px;
    white-space: pre;
    background-position: 0px -11px;
    /*line-height: 1.2em;*/
    margin-left: -15px !important;
    padding-right: 0px !important;
    margin-right: -35px !important;
    margin-top: 0px !important;
    padding-left: 30px !important;
    padding-top: 0px !important;
    padding-bottom: 0px !important;
    margin-bottom: 0px !important;
    overflow-x: scroll !important;
    overflow-y: scroll !important;
    min-height: 80px;
    /*height: 200px !important;*/
}
.nav-wrapper .input-field .editable-title{
    margin-top: 0px !important;
    border-bottom: 0px !important;
    font-size: 30px;
}
.flag {
    background: url('https://dl.dropboxusercontent.com/s/yx2q52k9g420tov/flags.png') no-repeat;
    background-color: #000;
    position: absolute;
}

.editable-title {
    margin-top: -25px !important;
    border-bottom: 0px !important;
}
.card-title .input-field .helper-text {
    display: none !important;
}
.card-title i {
    top: 20px;
    right: 20px;
    position: absolute;
}
.card-reveal .card-title .input-field{
    display: none !important;
}

.card-reveal .card-title p{
    display: inline !important;
}
.pagination li.active {
    background-color: #ddd;
}
.card.huge {
    height: 822px;
}

.card-title textarea:disabled{
    color: black !important;
}
nav textarea:disabled{
    color: white !important;
}
.select-wrapper {
    width: 140px;
}

.neo-card .card-content{
    overflow-y: auto !important;
    overflow-x: auto !important;
}


/* Hide scrollbar for Chrome, Safari and Opera */
#Textarea-12::-webkit-scrollbar {
    display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
#Textarea-12 {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}

.helper-text {
    display: none !important;
}
.chip {
    position: relative;
    margin-bottom: 5px;
}
/* Select inside chip */
.chip .input-field{
    position: absolute;

    top: 0px;
    margin: 0px;
    padding: 0px;
    left: 0px;
    width: 100%;
    color: transparent;
}
.chip .input-field .select-wrapper{
    position: absolute;
    width: 100%;

    height: 30px;
}
.chip .input-field .select-wrapper input{
    color: transparent;
    border-bottom: none;
}
.chip .input-field .select-wrapper .select-dropdown{
    position: absolute;
    width: 200px;
}
.chip .input-field label{
    display: none;
}
.chip .input-field .select-wrapper svg{
    display: none;
}
.nav-wrapper .input-field {
    position: absolute;
    margin-left: auto;
    width: 60%;
    left: 0;
    right: 0;
    margin-right: auto;
}
.nav-wrapper ul {
    z-index: -99;
}
.nav-wrapper .input-field textarea{
    position: absolute;


}


.modal-input-text .input-field.col label{
    left: 0px;
}

.neo-property-select .input-field .select-wrapper {
    margin-bottom: -20px;
}

.chart-tooltip {
    position: absolute;
    display: none;
    min-width: 80px;
    height: auto;
    background: none repeat scroll 0 0 #ffffff;
    border: 1px solid #6F257F;
    padding: 14px;
    z-index: 9999;
    text-align: center;
}

.neotable .chip {
    margin-right: 0px;
    margin-left: 2px;
}

